--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,9 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
+            android:name=".activity.ProdutoDetalhesActivity"
+            android:exported="false" />
+        <activity
             android:name=".activity.PaginaPrincipalActivity"
             android:exported="false" />
         <activity android:name=".activity.RegistrarActivity" />
